--- a/index.html
+++ b/index.html
@@ -11,13 +11,16 @@
 </head>
 <body>
     <main class="main">
-        <section class="button">
-            <button type="button" id="btn-resumos">
+        <section class="section-button">
+            <button type="button" class="button">
                 <a href="https://nice-gallimimus-3fc.notion.site/Desenvolvimento-de-Software-84c396a7cc7f47379c108b9ae7d7fbf3?pvs=4" target="_blank" title="Resumos">Resumos Tech</a>
             </button>
 
-            <button type="button" id="btn-portfolio">
+            <button type="button" class="button">
                 <a href="https://diogosilas.github.io/portfolio/" target="_blank">Portfólio</a>
+            </button>
+            <button type="button" class="button">
+                <a href="https://drive.google.com/file/d/1oJ8e1BbQhw2hL6V5MoFQYhvfss-Y_k1D/view" target="_blank">Currículo</a>
             </button>
             <footer>
                 <a href="https://github.com/DiogoSilas" target="_blank"><i class="fab fa-github-square"></i></a>
