--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             </button>
 
             <button type="button" class="button">
-                <a href="https://diogosilas.github.io/portfolio/" target="_blank">Portfólio</a>
+                <a href="https://diogosilas.github.io/portfolio/" target="_blank">Portfólio beta</a>
             </button>
             <button type="button" class="button">
                 <a href="https://drive.google.com/file/d/1oJ8e1BbQhw2hL6V5MoFQYhvfss-Y_k1D/view" target="_blank">Currículo</a>
