Style: Dicionado linear-gradient nos buttons.

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -17,11 +17,13 @@
             </button>
 
             <button type="button" class="button">
-                <a href="https://diogosilas.github.io/portfolio/" target="_blank">Portfólio beta</a>
-            </button>
-            <button type="button" class="button">
                 <a href="https://drive.google.com/file/d/1oJ8e1BbQhw2hL6V5MoFQYhvfss-Y_k1D/view" target="_blank">Currículo</a>
             </button>
+
+            <button type="button" class="button">
+                <a href="https://diogosilas.github.io/portfolio/" target="_blank">Portfólio beta</a>
+            </button>
+
             <footer>
                 <a href="https://github.com/DiogoSilas" target="_blank"><i class="fab fa-github-square"></i></a>
                 <a href="https://www.instagram.com/diogosilas_ds/" target="_blank"><i class="fab fa-instagram-square"></i></a>
