--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             </button>
 
             <button type="button" class="button">
-                <a href="https://diogosilas.github.io/portfolio/" target="_blank">Portfólio beta</a>
+                <a href="https://diogosilas.github.io/portfolio-v2/" target="_blank">Portfólio beta</a>
             </button>
 
             <footer>
