--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
     <main class="main">
         <section class="section-button">
             <button type="button" class="button">
-                <a href="https://nice-gallimimus-3fc.notion.site/Desenvolvimento-de-Software-84c396a7cc7f47379c108b9ae7d7fbf3?pvs=4" target="_blank" title="Resumos">Resumos Tech</a>
+                <a href="https://nice-gallimimus-3fc.notion.site/Desenvolvimento-de-Software-84c396a7cc7f47379c108b9ae7d7fbf3?pvs=4" target="_blank" title="Resumos">Meus Resumos</a>
             </button>
 
             <button type="button" class="button">
-                <a href="https://drive.google.com/file/d/1oJ8e1BbQhw2hL6V5MoFQYhvfss-Y_k1D/view" target="_blank">Currículo</a>
+                <a href="https://drive.google.com/file/d/1oJ8e1BbQhw2hL6V5MoFQYhvfss-Y_k1D/view" target="_blank">CV: Currículo</a>
             </button>
 
             <button type="button" class="button">
-                <a href="https://diogosilas.github.io/portfolio-v2/" target="_blank">Portfólio beta</a>
+                <a href="https://diogosilas.github.io/software-development-portfolio/" target="_blank">Portfólio Beta</a>
             </button>
 
             <footer>
