--- a/index.html
+++ b/index.html
@@ -15,15 +15,9 @@
             <button type="button" class="button">
                 <a href="https://nice-gallimimus-3fc.notion.site/Desenvolvimento-de-Software-84c396a7cc7f47379c108b9ae7d7fbf3?pvs=4" target="_blank" title="Resumos">Meus Resumos</a>
             </button>
-
             <button type="button" class="button">
-                <a href="https://drive.google.com/file/d/1oJ8e1BbQhw2hL6V5MoFQYhvfss-Y_k1D/view" target="_blank">CV: Currículo</a>
+                <a href="https://diogosilas.github.io/software-development-portfolio/" target="_blank">Portfólio</a>
             </button>
-
-            <button type="button" class="button">
-                <a href="https://diogosilas.github.io/software-development-portfolio/" target="_blank">Portfólio Beta</a>
-            </button>
-
             <footer>
                 <a href="https://github.com/DiogoSilas" target="_blank"><i class="fab fa-github-square"></i></a>
                 <a href="https://www.instagram.com/diogosilas_ds/" target="_blank"><i class="fab fa-instagram-square"></i></a>
